# desktop_shortcut_remover

./: Cargo.toml  LICENSE  README.md  changelog.md
src/: main.rs
