[package]
name = "desktop_shortcut_remover"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "A program that periodically removes desktop shortcuts"
repository = "https://github.com/G0rocks/desktop_shortcut_remover"
readme = "README.md"
categories = ["filesystem"]
keywords = ["desktop", "shortcut", "removal", "automation"]

[dependencies]
chrono = "0.4.42"
dirs = "6.0.0"
tasklet = "0.2.9"
tokio = "1.48.0"
